Fix alignment of payment form

--- a/WebContent/etn-styles.css
+++ b/WebContent/etn-styles.css
@@ -184,6 +184,9 @@ form {
 	font-size: 30px;
 	color: #818181;
 	padding-bottom: 20px;
+	display: inline-block;
+	padding: 10px;
+	width: 75%;
 }
 
 /* disable highlight when clicking on any form elements */
@@ -248,4 +251,15 @@ input[type="checkbox"] {
 
 .disclaimerText {
 	font-size: 26px;
+}
+
+.alignedInputs {
+	background: #000000;
+	font-family: 'Indie Flower', cursive;
+	font-size:24px;
+	color:#FFFFFF;
+	background:#171616;
+	border:0;
+	outline:0;
+	width:250px;
 }
